--- a/t/Makefile
+++ b/t/Makefile
@@ -1,11 +1,14 @@
 RM ?= rm -f
 
-run : check.out
+run : check
 	./$^
 
-check.out : . *.test.? c1/test.h c1/test.c ../*.?
-	$(CC) -o $@ -g -Wall -Wno-format -ldl -O2 -Ic1 -I.. c1/test.h c1/test.c *.c ../*.c
+c1/% :
+	git submodule update --init c1
+
+check : . *.test.? c1/test.? ../*.?
+	$(CC) -o $@ -g -Wall -Wno-format -O2 -Ic1 -I.. c1/test.h c1/test.c *.c ../*.c
 
 clean :
-	$(RM) check.out
+	$(RM) check
 .PHONY : run clean
